# cli-serial-hid-kvm

./: README.md  SHKVM.md  pyproject.toml
src/cli_serial_hid_kvm/: __init__.py  cli.py  config.py
tests/: test_cli_commands.py  test_cli_parse.py  test_config.py  test_ocr.py
